2020-01-30  Karl Berry  <karl@freefriends.org>

	* Makefile.am (enc_DATA): new variable, for new file dvips-all.enc.
	* configure.ac (encdir): define it.

2020-01-30  Akira Kakuto  <kakuto@w32tex.org>

	* bitmapenc.c: use strchr() instead of index(), because index()
	is not supported in Visual Studio 2010.

2020-01-29  Tomas Rokicki  <rokicki@gmail.com>
	
	* bitmapenc.c (struct bmenc): new member existsbm.
	(parseencodingfile): rename from parseencoding; change calls.
	(trytoparseenc),
	(parseenc): new fns.
	(addbmenc): call parseenc.
	(getencoding_seq): change type to struct bmenc.
	(downloadbmencoding): check that every defined character has a name.
	(doubleout): take double instead of float.
	* dvips-all.enc: more fonts.
	* dvips.c (-bitmapfontenc): rename option from -J.
	* dvips.texi: adjust documentation.
	* resident.c (get_defaults): new case b for bitmapfontenc,
	renamed from J.

2020-01-16  Karl Berry  <karl@freefriends.org>

	* afm2tfm.c,
	* dvips.c,
	* configure.ac: version 2020.1 and copyright 2020.

2020-01-12  Akira Kakuto  <kakuto@w32tex.org>

	* bitmapenc.c, download.c: Support old compilers, by declaring
	variables early in a block.

2020-01-11  Tomas Rokicki  <rokicki@gmail.com>

	Support encodings for bitmapped fonts, e.g., when cmr10
	is used as a bitmap. TUGboat article:
	https://tug.org/TUGboat/tb40-2/tb125rokicki-type3search.pdf
	
	* dvips-all.enc,
	* bitmapenc.c: new files.
	* Makefile.am (dvips_SOURCES): add it.
	* dosection.c (dosection): call bmenc_startsection.
	* download.c (unpack_bb): new fn.
	(downchar): call unpack_bb.
	(download): call downloadbmencoding .. finishbitmapencoding
	if needed.
	* dvips.c (helparr): new option -J to control feature.
	* dvips.h (tfd): new integer members llx, lly, urx, urx.
	* dvips.texi (Option details): describe -J option.
	(Configuration file commands): describe J config directive.
	(Bitmap font encodings): new section.
	* loadfont.c (loadfont): initialize and update global font